--- a/config.json
+++ b/config.json
@@ -1,9 +1,9 @@
 {
-  "prefix": "mc!",
+  "prefix": "d!",
   "id": "703845413593284648",
   "ownerID": "703845413593284648",
-  "wait": "24",
-    "rainbowdelay": 150000,
+  "wait": "40",
+    "rainbowdelay": 250000,
     "rainbowcommand": "rainbow",
     "rainbowstop": "stop",
     "rainbowrole": [
